--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-uvloop==0.9.1
+elasticsearch==6.2.0
+elasticsearch_async==6.0.0
 sanic==0.7.0
 elasticsearch_dsl==6.1.0
-elasticsearch_async==6.0.0
+uvloop==0.9.1
