Added empty healthcheck API. Added nomad file and Dockerfile.concourse

--- a/Dockerfile.concourse
+++ b/Dockerfile.concourse
@@ -4,5 +4,4 @@ COPY . /dp-conceptual-search
 WORKDIR /dp-conceptual-search
 RUN pip install -r requirements.txt
 
-ENTRYPOINT ["python"]
-CMD ["manager.py"]
+CMD python manager.py
