--- a/Dockerfile.concourse
+++ b/Dockerfile.concourse
@@ -2,6 +2,9 @@ FROM python:3.6
 
 COPY . /dp-conceptual-search
 WORKDIR /dp-conceptual-search
+
+RUN pip install Cython pybind11
+RUN cd lib/fastText/ && python setup.py install
 RUN pip install -r requirements.txt
 
 CMD python manager.py
