--- a/Dockerfile.concourse
+++ b/Dockerfile.concourse
@@ -3,8 +3,6 @@ FROM python:3.6
 COPY . /dp-conceptual-search
 WORKDIR /dp-conceptual-search
 
-RUN pip install Cython pybind11
-RUN cd lib/fastText/ && python setup.py install
-RUN pip install -r requirements.txt
+RUN make build
 
 CMD python manager.py
