Added concourse target in Makefile

--- a/Dockerfile.concourse
+++ b/Dockerfile.concourse
@@ -3,6 +3,6 @@ FROM python:3.6
 COPY . /dp-conceptual-search
 WORKDIR /dp-conceptual-search
 
-RUN make
+RUN make concourse
 
 CMD python manager.py
