Conceptual search always enabled. Added flag to enable/disable mongoDB (and in turn, user recommendations).

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -6,5 +6,6 @@ services:
           - mongo
         command: make test integration-test
         environment:
+            - MONGO_ENABLED=true
             - MONGO_SEARCH_DATABASE=test
             - MONGO_BIND_ADDR=mongodb://mongo:27017
