--- a/ci/unit.yml
+++ b/ci/unit.yml
@@ -5,7 +5,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: python
+    repository: sully0190/python-mongo
     tag: 3.6
 
 inputs:
