--- a/Dockerfile.concourse
+++ b/Dockerfile.concourse
@@ -3,7 +3,6 @@ FROM python:3.6
 COPY . /dp-conceptual-search
 WORKDIR /dp-conceptual-search
 
-RUN pip install -r requirements.txt
-RUN cd lib/fastText/ && python setup.py install
+RUN make build clean
 
 CMD python manager.py
