--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
 elasticsearch_async==6.0.0
-elasticsearch==6.2.0
-sanic_motor==0.2.8
+typing==3.6.2
 sanic==0.7.0
-uvloop==0.9.1
-scipy==1.0.0
-# setuptools==38.4.0
 sanic_prometheus==0.1.5
+fasttext==0.8.22
+uvloop==0.9.1
+sanic_motor==0.2.8
+gensim==3.4.0
+pymongo==3.6.1
 elasticsearch_dsl==6.1.0
 numpy==1.14.3
-typing==3.6.2
-python_json_logger==0.1.8
-# torch==0.4.0
+scipy==1.0.0
+pybind11==2.2.3
+elasticsearch==6.2.0
+python_json_logger==0.1.9
 unicode==2.6
