--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
         image: dp-conceptual-search-base:latest
         command: python manager.py
         environment:
+          - GA_SALT=${GA_SALT}
+          - GA_SUBSTR_INDEX=${GA_SUBSTR_INDEX}
           - ELASTIC_SEARCH_SERVER=elasticsearch:9200
           - MONGO_ENABLED=true
           - MONGO_SEARCH_DATABASE=local
