--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
+elasticsearch_async==6.0.0
+typing==3.6.2
 sanic==0.7.0
+sanic_prometheus==0.1.5
 uvloop==0.9.1
+pymongo==3.6.1
+motor==1.2.2
+sanic_motor==0.2.8
+gensim==3.4.0
 elasticsearch_dsl==6.1.0
 numpy==1.14.3
-elasticsearch_async==6.0.0
-Pygments==2.2.0
-gensim==3.4.0
-sanic_prometheus==0.1.5
-typing==3.6.2
-sanic_motor==0.2.8
-pybind11==2.2.3
-pymongo==3.6.1
 scipy==1.0.0
+pybind11==2.2.3
 elasticsearch==6.2.0
 python_json_logger==0.1.9
 unicode==2.6
+Pygments==2.2.0
