--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
-elasticsearch_async==6.0.0
+numpy==1.14.5
+scipy==1.1.0
+elasticsearch==6.3.0
+elasticsearch_async==6.1.0
 typing==3.6.2
 sanic==0.7.0
 sanic_prometheus==0.1.5
-uvloop==0.9.1
-pymongo==3.6.1
-motor==1.2.2
-sanic_motor==0.2.8
+uvloop==0.11.0
+#pymongo==3.6.1
+#sanic_motor==0.2.8
+sanic_motor==0.3.1
+#motor==1.2.2
 gensim==3.4.0
 elasticsearch_dsl==6.1.0
-numpy==1.14.3
-scipy==1.0.0
-pybind11==2.2.3
-elasticsearch==6.2.0
+#numpy==1.14.3
+#scipy==1.0.0
 python_json_logger==0.1.9
 unicode==2.6
 Pygments==2.2.0
