--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 numpy==1.14.5
+sanic==0.8.1
+ujson==1.35
 elasticsearch==6.3.0
 elasticsearch_async==6.1.0
 elasticsearch_dsl==6.1.0
 typing==3.6.2
-# sanic_prometheus==0.1.5
 uvloop==0.11.0
 # sanic_motor==0.3.1
 unicode==2.6
