--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,4 @@ inflect==1.0.0
 git+https://github.com/ONSdigital/dp4py-logging.git@master#egg=dp4py_logging
 git+https://github.com/ONSdigital/dp4py-config.git@master#egg=dp4py_config
 git+https://github.com/ONSdigital/dp4py-sanic.git@master#egg=dp4py_sanic
-git+https://github.com/ONSdigital/dp-fasttext.git@develop#egg=dp_fasttext
+git+https://github.com/ONSdigital/dp-fasttext.git@feature/aiohttp#egg=dp_fasttext
