--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,6 @@ services:
           dockerfile: Dockerfile.base
         depends_on:
           - elasticsearch
-#          - mongo
 
     conceptual-search:
         image: dp-conceptual-search-base:latest
@@ -16,30 +15,15 @@ services:
           - GA_SALT=${GA_SALT}
           - GA_SUBSTR_INDEX=${GA_SUBSTR_INDEX}
           - ELASTIC_SEARCH_SERVER=elasticsearch:9200
-          - CONCEPTUAL_SEARCH_ENABLED=false
-          - USER_RECOMMENDATION_ENABLED=false
-#          - MONGO_SEARCH_DATABASE=local
-#          - MONGO_BIND_ADDR=mongodb://mongo:27017
+          - CONCEPTUAL_SEARCH_ENABLED=true
           - COLOURED_LOGGING_ENABLED=true
           - PRETTY_LOGGING=true
         ports:
           - '5000:5000'
         links:
           - elasticsearch
-#          - mongo
 
-#    mongo:
-#         image: mongo:latest
-#         container_name: "mongo"
-#         environment:
-#           - MONGO_DATA_DIR=/data/db
-#           - MONGO_LOG_DIR=/dev/null
-#
-#           - ./data/db:/data/db
-#         ports:
-#             - "27017:27017"
-#         command: mongod --smallfiles --logpath=/dev/null # --quiet
-
+    # Custom ES image with plugin pre-installed
     elasticsearch:
         image: sully0190/elasticsearch-fast-vector-scoring:2.4.4
         container_name: "elasticsearch"
