--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,5 @@
-setuptools==38.4.0
-
 gitdb2==2.0.6
-prometheus_client==0.4.2
-aiohttp==3.4.4
-multidict==4.4.0
-python-json-logger==0.1.9
-sanic==0.8.1
-
+gitdb==0.6.4
 nltk==3.2.5
 sortedcontainers == 1.5.9
 numpy==1.14.5
@@ -22,7 +15,8 @@ unicode==2.6
 Pygments==2.2.0
 gensim==3.4.0
 nltk==3.2.5
+prometheus_client==0.2.0
 git+https://github.com/ONSdigital/dp4py-logging.git@master#egg=dp4py_logging
 git+https://github.com/ONSdigital/dp4py-config.git@master#egg=dp4py_config
-# git+https://github.com/ONSdigital/dp4py-sanic.git@master#egg=dp4py_sanic
+git+https://github.com/ONSdigital/dp4py-sanic.git@master#egg=dp4py_sanic
 git+https://github.com/ONSdigital/dp-fasttext.git@develop#egg=dp_fasttext
