--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ ujson==1.35
 elasticsearch==6.3.0
 elasticsearch_async==6.1.0
 elasticsearch_dsl==6.1.0
+aiohttp==3.5
+async-timeout<4.0,>=3.0
 typing==3.6.2
 uvloop==0.11.0
 # sanic_motor==0.3.1
