docker: drop permissions to user 1000 and ensure stopwords installed in correct homedir

--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -4,4 +4,8 @@ RUN pip install pip==20.0.1
 COPY . /dp-conceptual-search
 WORKDIR /dp-conceptual-search
 
+RUN useradd -rm -d /home/dpuser -s /bin/bash -u 1000 dpuser
+RUN touch app_version && chown dpuser app_version
+USER dpuser
+
 RUN make build version
